fix(@clayui/css): LPD-45052 Remove letter-spacing from diabled link in menubar-primary

--- a/packages/clay-css/src/scss/cadmin/variables/_menubar.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_menubar.scss
@@ -65,7 +65,6 @@ $cadmin-menubar-primary: map-deep-merge(
 				background-color: transparent,
 				box-shadow: none,
 				font-weight: $cadmin-font-weight-normal,
-				letter-spacing: 0.016rem,
 				before: (
 					content: none,
 				),
